fix pacakge name

--- a/Assets/CharacterController2D/package.json
+++ b/Assets/CharacterController2D/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.lexnewgate.Character2D",
+  "name": "com.lexnewgate.character2d",
   "version": "1.0.0",
   "displayName": "Character2D",
   "description": "This is an example package",
